# Twisterlab

./: .coverage  .dockerignore  .env  .env.production.example  .gitignore  ALERTING-IMPLEMENTATION.md  BUILD_INFO.txt  CD_PIPELINE_SUCCESS_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_LOCAL_README.md  CLAUDE_CODE_QUICK_START.txt  CLAUDE_CODE_SOLUTION.md  CLAUDE_CODE_SYSTEM_PROMPT.md  CLAUDE_CODE_TWISTERLAB_GUIDE.md  CLAUDE_CODE_TWISTERLAB_READY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.v5  Dockerfile.v5.2.3  FINAL_REPORT_PHASE_5_6.md  GEMMA4_10SEC_GUIDE.txt  GEMMA4_ACTIVATED.md  GEMMA4_FINAL_SETUP.md  GEMMA4_LAUNCH.ps1  GEMMA4_PREFLIGHT_CHECK.md  GEMMA4_QUICK_LAUNCH.sh  GEMMA4_SETUP.md  INDEX.md  LAUNCH_INSTRUCTIONS.txt  LOCLAUDE_SETUP_GUIDE.md  MCP_CONFIG_FIXES_SUMMARY.md  MCP_INTEGRATION_SUCCESS.md  MCP_SETUP_STATUS.md  MISSION_AUDIT_REPORT.md  Makefile  OLLAMA_LAUNCH_CLAUDE.md  OLLAMA_TOOLS_README.md  (+108 more)
.agent/: AGENT_INSTRUCTIONS.md
.continue/: config.json  config.yaml  mcp_instructions.md
.copilot/: instructions.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-config.json
config/: MCP_SETUP.md  claude_desktop_config.json  continue-config.yaml  vscode-mcp-config.json
data/: base_graph.json  health.json  kb_payload.json  kb_rpc_payload.json  last_queue.json  mcp_v4_clean.json  model.json  out.json  skills.json  strategy_payload.json  temp_cm.json  test_init.json  tools_dump.json  tools_invoke.json  tools_list.json
demos/: autonomous_incident.py  business_automation_demo.py  test_all_agents.py  ticket_resolution_demo.py
deploy/: Dockerfile.simple  test_maestro_edge.py
docs/: ARCHITECTURE.md  ARCHITECTURE_MCP.md  AUDIT_2026-01-15.md  AUDIT_AGENTS_2026-01-16.md  AUDIT_GLOBAL_FINAL_V3.3.0.md  AUDIT_MCP_TOOLS_2026-01-16.md  AUDIT_PROJET_2025-12-31.md  DEPLOYMENT_WORKFLOW.md  EDGESERVER_HARDWARE_VERIFICATION.md  GITHUB_PROFILE_TEMPLATE.md  GITHUB_SECRETS_GUIDE.md  HARBOR_SETUP_COMPLETE.md  INFRASTRUCTURE_AUDIT_2026-02-04.md  MCP_INTEGRATION_STATUS.md  MCP_REBUILD_GUIDE.md  MIGRATION_SWARM_K8S.md  ONBOARDING.md  PHASE_0_COMPLETION_REPORT.md  PHASE_0_EXECUTION_PLAN.md  PHASE_1_BUDGET_ZERO.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_MEETING_GO_NO_GO.md  PLAN_INTERVENTION_COMPLETE_2026-02.md  README.md  TODO.md  prometheus-alerting-setup.md  resilience-metrics-dashboard.md  twisterlab-installable-cli-plan.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
k8s/: archive-pvc.yaml  business-agents-deployment.yaml  business-agents-secrets-template.yaml  mcp-unified-patch.yaml  mcp-unified-v3.yaml  patch-deployment-archive.yaml  tmp-builder.yaml  tmp-node-debugger.yaml  updated_secrets.yaml
logs/: api_desc.txt  api_logs_current.txt  configmaps.txt  deploys.txt  hpa.txt  ingress.txt  list_tools_debug.txt  loras_out.txt  mcp_logs.txt  mcp_proxy_debug.log.in  monitoring_all.txt  nodes.txt  output_poc.txt  pg_logs.txt  pods.txt  pv.txt  storage.txt  top_nodes.txt  twisterlab_all.txt
meta_session/: Local State  first_party_sets.db
nginx/: nginx.conf
scripts/: Deploy-PrometheusAlerts.ps1  README_SECRETS.md  Test-PrometheusAlerts.ps1  apple_theme.py  audit_agents.py  backup-twisterlab-postgres.sh  backup-twisterlab-redis.sh  bootstrap.ps1  bootstrap.sh  build_dev.py  build_mcp_image.py  check_db_status.py  check_notion_block.py  check_real_metrics.py  check_routes.py  cleanup_db.py  command_center_pro.py  complete_notion_test_sync.py  configure-github-secrets.ps1  consolidate-configmaps.ps1  create_excel.py  debug_prometheus.py  deploy-fix-agents.ps1  deploy-prometheus-alerts.sh  deploy_v4.py  dev_deploy.py  devops-toolkit.ps1  diag_agents.py  dump_agents.py  dump_tools.py  extend-lvm-phase1.sh  extract_css.py  extract_tools.py  finalize_consolidation.py  find_intel.py  find_notion_page.py  fix_html_classes.py  generate_secrets.py  generate_test.py  global_repo_audit.py  (+47 more)
src/: ollama_integration.py  ollama_system_prompt.txt  ollama_tools_server.py  start_ollama_tools.bat
tests/: conftest.py  load_test_mcp.py  smoke_test_v4.py  (+1 more)
(+1655 files in other folders)
