[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twisterlab"
version = "1.0.0"
authors = [
  { name="TwisterLab Team", email="contact@twisterlab.io" },
]
description = "TwisterLab core application and agents."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=4.5.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
]

[project.urls]
"Homepage" = "https://github.com/twisterlab/twisterlab"
"Bug Tracker" = "https://github.com/twisterlab/twisterlab/issues"
