[tool.poetry]
name = "twisterlab"
version = "3.2.0"
description = "TwisterLab: A multi-agent AI infrastructure."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.123.5"
uvicorn = "^0.38.0"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
aiosqlite = "^0.19.0"
redis = "^7.1.1"
asyncpg = "^0.29.0"
prometheus_fastapi_instrumentator = "^7.1.0"
alembic = "^1.13.2"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-instrumentation = "^0.47b0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-exporter-jaeger = "^1.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^42.0.0"
playwright = "^1.40.0"
mcp = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = [".venv"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

