[tool.poetry]
name = "twisterlab"
version = "4.0.0"
description = "TwisterLab Operation Antigravity: Unified AI Agent Infrastructure."
authors = ["Younes El Fakir <youremail@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Core API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"

# Data Layer (Antigravity Standard)
sqlalchemy = "^2.0.0"
asyncpg = "^0.31.0"
redis = "^5.0.0"
aiosqlite = "^0.19.0"

# AI & Orchestration
httpx = "^0.27.0"
requests = "^2.31.0"
notion-client = "^2.2.1"
mcp = "^1.0.0"
json-repair = "^0.25.0" # Critical for Maestro stability

# Trading & Scalping
ccxt = "4.5.50"
numpy = "^1.26.0"
pandas = "^2.1.0"

# Monitoring & OS
psutil = "^5.9.0"
docker = "^7.0.0"
prometheus-client = "^0.19.0"
prometheus_fastapi_instrumentator = "^6.1.0"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^42.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Automation
playwright = "^1.40.0"
paramiko = "^3.4.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
alembic = "^1.13.0"

[tool.poetry.scripts]
twisterlab = "twisterlab.cli.main:main"

[tool.poetry.plugins."twisterlab.agents"]
maestro = "twisterlab.agents.real.real_maestro_agent:RealMaestroAgent"
trader = "twisterlab.agents.real.real_trader_agent:RealTraderAgent"
notion = "twisterlab.agents.real.real_notion_agent:RealNotionAgent"
monitoring = "twisterlab.agents.real.real_monitoring_agent:RealMonitoringAgent"
summarizer = "twisterlab.agents.real.real_summarizer_agent:RealSummarizerAgent"
translator = "twisterlab.agents.real.real_translation_agent:RealTranslationAgent"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = [".venv"]

[tool.black]
line-length = 88
